<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- HEADER -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cart_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/person_icon" />
            <TextView
                android:id="@+id/buyer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/cart_customer"/>

            <View style="@style/vertical_divider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/cart_order_number"/>

            <TextView
                android:id="@+id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/number"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frag_home_cart_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/cart_half_horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@id/cart_header"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cart_half_horizontal_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/cart_purge_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toTopOf="@id/cart_half_horizontal_guideline"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/cart_purge" />

    <TextView
        android:id="@+id/cart_quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cart_quantity"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@id/cart_price_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/cart_quantity_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="4dp"
        android:text="@string/default_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cart_price_text"/>


    <TextView
        android:id="@+id/cart_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cart_price_text"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/cart_discount_text"
        app:layout_constraintLeft_toLeftOf="parent" />
    <!--        app:layout_constraintTop_toBottomOf="@id/cart_half_horizontal_guideline"-->

    <TextView
        android:id="@+id/cart_price_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="4dp"
        android:text="@string/rupiah_denominator"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/cart_discount_number"
        app:layout_constraintRight_toRightOf="parent" />
    <!--        app:layout_constraintTop_toBottomOf="@id/cart_half_horizontal_guideline"-->


    <TextView
        android:id="@+id/cart_discount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cart_discount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frag_home_payment_button"/>

    <TextView
        android:id="@+id/cart_discount_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="32dp"
        android:textAlignment="textStart"
        android:text="@string/rupiah_denominator"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frag_home_payment_button"/>


    <!-- FOOTER BUTTONS -->
<!--    <Button-->
<!--        android:id="@+id/stubBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="40dp"-->
<!--        android:backgroundTint="@color/orange"-->
<!--        android:textSize="11sp"-->
<!--        android:text="@string/simpan"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toLeftOf="@id/deleteBtn"-->
<!--        app:layout_constraintBottom_toTopOf="@id/paymentBtn"/>-->

<!--    <Button-->
<!--        android:id="@+id/deleteBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="40dp"-->
<!--        android:backgroundTint="@color/red"-->
<!--        android:textSize="11sp"-->
<!--        android:text="@string/hapus"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintLeft_toRightOf="@id/stubBtn"-->
<!--        app:layout_constraintBottom_toTopOf="@id/paymentBtn"/>-->
    <Button
        android:id="@+id/frag_home_payment_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:backgroundTint="@color/teal_700"
        android:textSize="14sp"
        android:text="@string/bayar"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>