<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/rv_product_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="1dp"
                android:src="@drawable/ic_baseline_image_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/product_image" />
            <TextView
                android:id="@+id/rv_product_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_produk"
                android:textAlignment="textStart"
                android:maxLines="4"
                app:layout_constraintRight_toRightOf="@id/rv_product_vertical_guideline"
                app:layout_constraintLeft_toRightOf="@id/rv_product_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rv_product_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8"/>
            <TextView
                android:id="@+id/rv_product_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/rupiah_denominator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/rv_product_vertical_guideline"/>
            <TextView
                android:id="@+id/rv_product_price_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="textStart"
                app:layout_constraintLeft_toRightOf="@id/rv_product_price_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>