<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/rv_receipt_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="textStart"
                android:maxLines="4"
                android:textSize="11sp"
                android:text="@string/nama_produk"
                app:layout_constraintLeft_toRightOf="@id/receipt_detail_qty_shape"
                app:layout_constraintRight_toLeftOf="@id/rv_receipt_detail_price_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/receipt_detail_qty_shape"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:src="@drawable/bg_product_quantity"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rv_receipt_detail_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/default_number"
                app:layout_constraintTop_toTopOf="@id/receipt_detail_qty_shape"
                app:layout_constraintBottom_toBottomOf="@id/receipt_detail_qty_shape"
                app:layout_constraintLeft_toLeftOf="@id/receipt_detail_qty_shape"
                app:layout_constraintRight_toRightOf="@id/receipt_detail_qty_shape"/>

            <TextView
                android:id="@+id/rv_receipt_detail_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                android:text="@string/rupiah_denominator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/rv_receipt_detail_price_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textSize="11sp"
                android:text="@string/default_number"
                android:foregroundGravity="right"
                app:layout_constraintLeft_toRightOf="@id/rv_receipt_detail_price_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>